fix(fasta_purge_retained_haplotype): add ksenia to author list in meta

--- a/subworkflows/sanger-tol/fasta_purge_retained_haplotype/meta.yml
+++ b/subworkflows/sanger-tol/fasta_purge_retained_haplotype/meta.yml
@@ -111,5 +111,6 @@ output:
       pattern: "versions.yml"
 authors:
   - "@prototaxites"
+  - "@ksenia-krasheninnikova"
 maintainers:
   - "@prototaxites"
