--- a/subworkflows/sanger-tol/fasta_purge_retained_haplotype/meta.yml
+++ b/subworkflows/sanger-tol/fasta_purge_retained_haplotype/meta.yml
@@ -19,6 +19,8 @@ components:
       git_remote: https://github.com/nf-core/modules.git
   - purgedups/getseqs:
       git_remote: https://github.com/nf-core/modules.git
+  - purgedups/histplot:
+      git_remote: https://github.com/nf-core/modules.git
   - purgedups/pbcstat:
       git_remote: https://github.com/nf-core/modules.git
   - purgedups/purgedups:
