--- a/modules/sanger-tol/blobtoolkit/generatecsv/meta.yml
+++ b/modules/sanger-tol/blobtoolkit/generatecsv/meta.yml
@@ -54,7 +54,7 @@ input:
 
 output:
   csv:
-    - - meta:
+    - - new_meta:
           type: map
           description: |
             Groovy Map containing sample information
