--- a/subworkflows/sanger-tol/fasta_bam_scaffolding_yahs/meta.yml
+++ b/subworkflows/sanger-tol/fasta_bam_scaffolding_yahs/meta.yml
@@ -1,44 +1,80 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/subworkflows/yaml-schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/sanger-tol/nf-core-modules/refs/heads/main/subworkflows/yaml-schema.json
 name: "fasta_bam_scaffolding_yahs"
-## TODO nf-core: Add a description of the subworkflow and list keywords
-description: Sort SAM/BAM/CRAM file
+description: |
+  Scaffold an assembly FASTA file using Hi-C contacts with YaHS, and build
+  contact maps for output visualisation.
 keywords:
-  - sort
-  - bam
-  - sam
-  - cram
-## TODO nf-core: Add a list of the modules and/or subworkflows used in the subworkflow
+  - scaffolding
+  - hic
+  - contact map
+  - assembly
 components:
   - samtools/sort
   - samtools/index
-## TODO nf-core: List all of the channels used as input with a description and their structure
 input:
-  - ch_bam:
+  - ch_fasta:
       type: file
       description: |
-        The input channel containing the BAM/CRAM/SAM files
+        Channel containing assemblies for scaffolding.
+
+        Structure: [ val(meta), path(fasta) ]
+      pattern: "*.{bam/cram/sam}"
+  - ch_hic_bam:
+      type: file
+      description: |
+        Channel containing BAM files of Hi-C reads mapped to each assembly.
+
         Structure: [ val(meta), path(bam) ]
       pattern: "*.{bam/cram/sam}"
-## TODO nf-core: List all of the channels used as output with a descriptions and their structure
+  - val_build_pretext:
+      type: boolean
+      description: Build a PretextMap contact map
+  - val_build_cooler:
+      type: boolean
+      description: Build a Cooler contact map
+  - val_build_juicer:
+      type: boolean
+      description: Build a Juicer contact map
+  - val_cool_bin:
+      type: integer
+      description: Bin size for cooler
 output:
-  - bam:
+  - scaffolds_fasta:
       type: file
       description: |
         Channel containing BAM files
         Structure: [ val(meta), path(bam) ]
       pattern: "*.bam"
-  - bai:
+  - scaffolds_agp:
       type: file
       description: |
         Channel containing indexed BAM (BAI) files
         Structure: [ val(meta), path(bai) ]
       pattern: "*.bai"
-  - csi:
+  - pretext:
       type: file
       description: |
-        Channel containing CSI files
-        Structure: [ val(meta), path(csi) ]
-      pattern: "*.csi"
+        Contact map in PretextMap format.
+        Structure: [ val(meta), path(pretext) ]
+      pattern: "*.pretext"
+  - pretext_png:
+      type: file
+      description: |
+        PNG visualisation of the Pretext contact map.
+        Structure: [ val(meta), path(png) ]
+      pattern: "*.png"
+  - cool:
+      type: file
+      description: |
+        Contact map in mCooler format
+        Structure: [ val(meta), path(mcool) ]
+      pattern: "*.mcool"
+  - hic:
+      type: file
+      description: |
+        Contact map in Juicer format
+        Structure: [ val(meta), path(hic) ]
+      pattern: "*.hic"
   - versions:
       type: file
       description: |
