--- a/subworkflows/sanger-tol/fasta_bam_scaffolding_yahs/meta.yml
+++ b/subworkflows/sanger-tol/fasta_bam_scaffolding_yahs/meta.yml
@@ -9,8 +9,13 @@ keywords:
   - contact map
   - assembly
 components:
-  - samtools/sort
-  - samtools/index
+  - bedtools/bamtobedsort
+  - yahs/makepairsfile
+  - pairs_create_contact_maps
+  - samtools/faidx:
+      git_remote: https://github.com/nf-core/modules.git
+  - yahs:
+      git_remote: https://github.com/nf-core/modules.git
 input:
   - ch_fasta:
       type: file
