--- a/subworkflows/sanger-tol/cram_map_illumina_hic/meta.yml
+++ b/subworkflows/sanger-tol/cram_map_illumina_hic/meta.yml
@@ -47,6 +47,12 @@ output:
         Channel containing the BAM files describing Hi-C alignments to the input assemblies
         Structure: [ val(meta), path(bam) ]
       pattern: "*.bam"
+  - bai:
+      type: file
+      description: |
+        Channel containing the BAM index files for the output BAM
+        Structure: [ val(meta), path(bai) ]
+      pattern: "*.bai"
   - versions:
       type: file
       description: |
