--- a/modules/sanger-tol/contactbed/tests/nextflow.config
+++ b/modules/sanger-tol/contactbed/tests/nextflow.config
@@ -1,6 +1,12 @@
+nextflow.enable.moduleBinaries = true
+
 process {
     withName: CONTACTBED {
-        publishDir = { null }
+        publishDir = [
+            path: "${baseDir}/output",
+            mode: 'copy',
+            overwrite: true
+        ]
     }
 }
 
