--- a/modules/sanger-tol/generatecontactsindex/tests/nextflow.config
+++ b/modules/sanger-tol/generatecontactsindex/tests/nextflow.config
@@ -1,6 +1,10 @@
 process {
     withName: GENERATE_CONTACTS_INDEX {
-        publishDir = { null }
+        publishDir = [
+            path: "${baseDir}/output",
+            mode: 'copy',
+            overwrite: true
+        ]
     }
 }
 
