--- a/subworkflows/sanger-tol/bam2cool/nextflow.config
+++ b/subworkflows/sanger-tol/bam2cool/nextflow.config
@@ -2,6 +2,6 @@ nextflow.enable.moduleBinaries = true
 
 process {
     withName: COOLER_CLOAD {
-        ext.args1 = { "${params.cooler_cload_args}"     }
+        ext.args = "pairs -0 -c1 3 -p1 4 -c2 7 -p2 8"
     }
 }
