--- a/subworkflows/sanger-tol/bam2cool/tests/nextflow.config
+++ b/subworkflows/sanger-tol/bam2cool/tests/nextflow.config
@@ -2,6 +2,6 @@ nextflow.enable.moduleBinaries = true
 
 process {
     withName: COOLER_CLOAD {
-        ext.args1 = { params.cooler_cload_args }
+        ext.args = { "${params.cooler_cload_args}"     }
     }
 }
