fixes to bam2cool

--- a/subworkflows/sanger-tol/bam2cool/tests/nextflow.config
+++ b/subworkflows/sanger-tol/bam2cool/tests/nextflow.config
@@ -1,7 +1,17 @@
 nextflow.enable.moduleBinaries = true
 
 process {
+    withName: BEDTOOLS_BAMTOBEDSORT {
+        ext.prefix = { "${bam.getName()}" }
+    }
+    withName: CONTACTBED {
+        ext.prefix = { "${file.getName()}" }
+    }
+    withName: GENERATE_CONTACTS_INDEX {
+        ext.prefix = { "${contacts.getName()}" }
+    }
     withName: COOLER_CLOAD {
+        ext.prefix = { "${contacts.getName()}" }
         ext.args = { "${params.cooler_cload_args}"     }
     }
 }
