fix: add indexes to bam

--- a/subworkflows/sanger-tol/bam2cool/tests/nextflow.config
+++ b/subworkflows/sanger-tol/bam2cool/tests/nextflow.config
@@ -2,16 +2,16 @@ nextflow.enable.moduleBinaries = true
 
 process {
     withName: BEDTOOLS_BAMTOBEDSORT {
-        ext.prefix = { "${bam.getName()}" }
+        ext.prefix = { "${meta.id}.${meta.bam_idx}" }
     }
     withName: CONTACTBED {
-        ext.prefix = { "${file.getName()}" }
+        ext.prefix = { "${meta.id}.${meta.bam_idx}" }
     }
     withName: GENERATE_CONTACTS_INDEX {
-        ext.prefix = { "${contacts.getName()}" }
+        ext.prefix = { "${meta.id}.${meta.bam_idx}" }
     }
     withName: COOLER_CLOAD {
-        ext.prefix = { "${contacts.getName()}" }
-        ext.args = { "${params.cooler_cload_args}"     }
+        ext.prefix = { "${meta.id}.${meta.bam_idx}"  }
+        ext.args   = { "${params.cooler_cload_args}" }
     }
 }
