--- a/subworkflows/sanger-tol/bam2cool/tests/nextflow.config
+++ b/subworkflows/sanger-tol/bam2cool/tests/nextflow.config
@@ -3,6 +3,8 @@ nextflow.enable.moduleBinaries = true
 process {
     withName: BEDTOOLS_BAMTOBEDSORT {
         ext.prefix = { "${meta.id}.${meta.bam_idx}" }
+        ext.args1  = { params.bamtobedsort_view_args }
+        ext.args3  = { params.bamtobedsort_sort_args }
     }
     withName: CONTACTBED {
         ext.prefix = { "${meta.id}.${meta.bam_idx}" }
