feat(samtools/mergedup): update bam merge subwf

--- a/subworkflows/sanger-tol/bam_samtools_merge_markdup/tests/nextflow.config
+++ b/subworkflows/sanger-tol/bam_samtools_merge_markdup/tests/nextflow.config
@@ -1,5 +1,5 @@
 process {
-    withName: SAMTOOLS_MARKDUP {
+    withName: 'SAMTOOLS_.*DUP' {
         ext.prefix = { "${meta.id}.markdup" }
     }
 }
