feat(samtools/mergedup): update dependent snaps

--- a/subworkflows/sanger-tol/cram_map_illumina_hic/tests/nextflow.config
+++ b/subworkflows/sanger-tol/cram_map_illumina_hic/tests/nextflow.config
@@ -23,7 +23,7 @@ process {
         ext.args6 = { "${params.samtools_sort_args}"    }
     }
 
-    withName: SAMTOOLS_MARKDUP {
+    withName: 'SAMTOOLS_.*DUP' {
         ext.prefix = { "${meta.id}.mkdup"  }
     }
 }
