--- a/subworkflows/sanger-tol/bam_samtools_merge_markdup/meta.yml
+++ b/subworkflows/sanger-tol/bam_samtools_merge_markdup/meta.yml
@@ -10,8 +10,6 @@ components:
   - samtools/mergedup
   - samtools/faidx:
       git_remote: https://github.com/nf-core/modules.git
-  - samtools/index:
-      git_remote: https://github.com/nf-core/modules.git
   - samtools/merge:
       git_remote: https://github.com/nf-core/modules.git
 input:
@@ -42,6 +40,12 @@ output:
       type: file
       description: |
         Channel containing the index file(s) for the merged BAM
+        Structure: [ val(meta), path(index) ]
+      pattern: "*.{bai,csi,crai}"
+  - metrics:
+      type: file
+      description: |
+        Channel containing markdup metrics, if duplicates marked
         Structure: [ val(meta), path(index) ]
       pattern: "*.{bai,csi,crai}"
   - versions:
