--- a/subworkflows/sanger-tol/bam_samtools_merge_markdup/tests/nextflow.config
+++ b/subworkflows/sanger-tol/bam_samtools_merge_markdup/tests/nextflow.config
@@ -1,5 +1,8 @@
 process {
-    withName: 'SAMTOOLS_.*DUP' {
-        ext.prefix = { "${meta.id}.markdup" }
+    withName: 'SAMTOOLS_MERGE' {
+        ext.args = { params.samtools_args }
+    }
+    withName: 'SAMTOOLS_MERGEDUP' {
+        ext.args2 = { params.samtools_args }
     }
 }
