--- a/modules/sanger-tol/cramalign/minimap2align/meta.yml
+++ b/modules/sanger-tol/cramalign/minimap2align/meta.yml
@@ -34,6 +34,12 @@ input:
           Groovy Map containing sample information
           e.g. `[ id:'sample1' ]`
 
+    - readgroup:
+        type: string
+        description: text file containing read group information to pass to aligners
+        pattern: "*.txt"
+        ontologies: []
+
     - cram:
         type: file
         description: CRAM file containing sequences to align
