--- a/modules/sanger-tol/cramalign/minimap2alignhic/meta.yml
+++ b/modules/sanger-tol/cramalign/minimap2alignhic/meta.yml
@@ -42,6 +42,12 @@ input:
           Groovy Map containing sample information
           e.g. `[ id:'sample1' ]`
 
+    - readgroup:
+        type: string
+        description: text file containing read group information to pass to aligners
+        pattern: "*.txt"
+        ontologies: []
+
     - cram:
         type: file
         description: CRAM file containing Hi-C sequences to align
