--- a/modules/sanger-tol/cramalign/minimap2align/meta.yml
+++ b/modules/sanger-tol/cramalign/minimap2align/meta.yml
@@ -34,7 +34,7 @@ input:
           Groovy Map containing sample information
           e.g. `[ id:'sample1' ]`
 
-    - readgroup:
+    - rg_file:
         type: string
         description: text file containing read group information to pass to aligners
         pattern: "*.txt"
