--- a/subworkflows/sanger-tol/cram_map_illumina_hic/meta.yml
+++ b/subworkflows/sanger-tol/cram_map_illumina_hic/meta.yml
@@ -11,7 +11,10 @@ components:
   - cramalign/bwamem2alignhic
   - cramalign/minimap2alignhic
   - bam_samtools_merge_markdup
+  
   - samtools/index:
+      git_remote: https://github.com/nf-core/modules.git
+  - samtools/splitheader:
       git_remote: https://github.com/nf-core/modules.git
   - bwamem2/index:
       git_remote: https://github.com/nf-core/modules.git
