--- a/subworkflows/sanger-tol/cram_map_longread/meta.yml
+++ b/subworkflows/sanger-tol/cram_map_longread/meta.yml
@@ -16,6 +16,8 @@ components:
       git_remote: https://github.com/nf-core/modules.git
   - samtools/merge:
       git_remote: https://github.com/nf-core/modules.git
+  - samtools/splitheader:
+      git_remote: https://github.com/nf-core/modules.git
   - minimap2/index:
       git_remote: https://github.com/nf-core/modules.git
 
