--- a/modules/sanger-tol/cramalign/minimap2alignhic/meta.yml
+++ b/modules/sanger-tol/cramalign/minimap2alignhic/meta.yml
@@ -42,11 +42,9 @@ input:
           Groovy Map containing sample information
           e.g. `[ id:'sample1' ]`
 
-    - rg_file:
+    - rglines:
         type: string
-        description: text file containing read group information to pass to aligners
-        pattern: "*.txt"
-        ontologies: []
+        description: read group information to pass to aligners
 
     - cram:
         type: file
