Forgot some suggestions
Co-authored-by: Jim Downie <19718667+prototaxites@users.noreply.github.com>

--- a/modules/sanger-tol/cramalign/bwamem2alignhic/meta.yml
+++ b/modules/sanger-tol/cramalign/bwamem2alignhic/meta.yml
@@ -39,7 +39,7 @@ input:
 
     - rglines:
         type: list
-        description: read group information to pass to aligners
+        description: A list of strings, each a valid SAM-format @RG header line, to pass to the aligner
 
     - cram:
         type: file
