Apply bam_samtools_merge_markdup subworkflow

--- a/subworkflows/sanger-tol/cram_map_long_reads/tests/nextflow.config
+++ b/subworkflows/sanger-tol/cram_map_long_reads/tests/nextflow.config
@@ -7,4 +7,8 @@ process {
         ext.args4 = { "${params.samtools_view_args}"    }
         ext.args5 = { "${params.samtools_sort_args}"    }
     }
+
+    withName: SAMTOOLS_MERGE {
+        ext.args = { "${params.samtools_merge_args}" }
+    }
 }
