--- a/subworkflows/sanger-tol/cram_map_long_reads/meta.yml
+++ b/subworkflows/sanger-tol/cram_map_long_reads/meta.yml
@@ -10,6 +10,7 @@ keywords:
 components:
   - cramalign/gencramchunks
   - cramalign/minimap2align
+  - bam_samtools_merge_markdup
   - samtools/index:
       git_remote: https://github.com/nf-core/modules.git
   - samtools/faidx:
