--- a/modules/sanger-tol/hifiasm/meta.yml
+++ b/modules/sanger-tol/hifiasm/meta.yml
@@ -26,7 +26,8 @@ input:
           e.g. [ id:'test', single_end:false ]
     - long_reads:
         type: file
-        description: Long reads PacBio HiFi reads or ONT reads (requires ext.arg '--ont').
+        description: Long reads PacBio HiFi reads or ONT reads (requires ext.arg
+          '--ont').
         ontologies:
           - edam: "http://edamontology.org/format_2546" # FASTA-like
     - ul_reads:
@@ -40,7 +41,8 @@ input:
           Groovy Map containing information about Hi-C reads
     - hic_cram:
         type: file
-        description: Illumina short reads containing Hi-C data in unaligned CRAM format.
+        description: Illumina short reads containing Hi-C data in unaligned CRAM
+          format.
         ontologies:
           - edam: "http://edamontology.org/format_3462" # CRAM
   - - meta3:
@@ -49,15 +51,15 @@ input:
           Groovy Map containing information about parental kmers.
     - paternal_kmer_dump:
         type: file
-        description: Yak kmer dump file for paternal reads (can be used for haplotype
-          resolution). It can have an arbitrary extension.
+        description: Yak kmer dump file for paternal reads (can be used for
+          haplotype resolution). It can have an arbitrary extension.
         ontologies: []
     - maternal_kmer_dump:
         type: file
-        description: Yak kmer dump file for maternal reads (can be used for haplotype
-          resolution). It can have an arbitrary extension.
+        description: Yak kmer dump file for maternal reads (can be used for
+          haplotype resolution). It can have an arbitrary extension.
         ontologies: []
-  - - meta3:
+  - - meta4:
         type: map
         description: |
           Groovy Map containing information about the input bin files
@@ -66,8 +68,8 @@ input:
         description: bin files produced during a previous Hifiasm run
         ontologies: []
 output:
-  - bin_files:
-      - meta:
+  bin_files:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -83,8 +85,8 @@ output:
             steps.
           pattern: "*.bin"
           ontologies: []
-  - assembly_graphs:
-      - meta:
+  assembly_graphs:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -95,8 +97,9 @@ output:
           pattern: "*.gfa.gz"
           ontologies:
             - edam: http://edamontology.org/format_3975 # GFA
-  - assembly_fasta:
-      - meta:
+            - edam: http://edamontology.org/format_3989 # GZIP format
+  assembly_fasta:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -107,8 +110,8 @@ output:
           pattern: "*.fa"
           ontologies:
             - edam: "http://edamontology.org/format_2546" # FASTA-like
-  - corrected_reads:
-      - meta:
+  corrected_reads:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -121,8 +124,9 @@ output:
           pattern: "*.ec.fa.gz"
           ontologies:
             - edam: "http://edamontology.org/format_2546" # FASTA-like
-  - read_overlaps:
-      - meta:
+            - edam: http://edamontology.org/format_3989 # GZIP format
+  read_overlaps:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
@@ -135,26 +139,26 @@ output:
           pattern: "*.ovlp.paf.gz"
           ontologies:
             - edam: http://edamontology.org/data_2526 # TSV
-  - log:
-      - meta:
+            - edam: http://edamontology.org/format_3989 # GZIP format
+  log:
+    - - meta:
           type: map
           description: |
             Groovy Map containing sample information
             e.g. [ id:'test', single_end:false ]
-          pattern: "*.log"
       - "*.log":
           type: file
-          description: Stderr log
+          description: Log file describing Hifiasm run.
           pattern: "*.log"
           ontologies:
             - edam: http://edamontology.org/data_2526 # Text
-  - versions:
-      - versions.yml:
-          type: file
-          description: File containing software versions
-          pattern: "versions.yml"
-          ontologies:
-            - edam: http://edamontology.org/format_3750 # YAML
+  versions:
+    - versions.yml:
+        type: file
+        description: File containing software versions
+        pattern: "versions.yml"
+        ontologies:
+          - edam: http://edamontology.org/format_3750 # YAML
 authors:
   - "@sidorov-si"
   - "@scorreard"
