--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -32,6 +32,9 @@ runs:
       with:
         python-version: "3.14"
 
+    - name: Set up nf-core tools development version
+      run: python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
+
     - name: Set up nf-test
       uses: nf-core/setup-nf-test@v1
       with:
