--- a/.github/actions/nf-test-action/action.yml
+++ b/.github/actions/nf-test-action/action.yml
@@ -33,6 +33,7 @@ runs:
         python-version: "3.14"
 
     - name: Set up nf-core tools development version
+      shell: bash
       run: python -m pip install --upgrade --force-reinstall git+https://github.com/nf-core/tools.git@dev
 
     - name: Set up nf-test
