--- a/modules/sanger-tol/yak/count/meta.yml
+++ b/modules/sanger-tol/yak/count/meta.yml
@@ -19,7 +19,7 @@ input:
         type: map
         description: |
           Groovy Map containing sample information
-          e.g. `[ id:'sample1', single_end:false ]`
+          e.g. `[ id:'sample1' ]`
     - reads:
         type: file
         description: reads fastq/cram file
