feat(genome_statistics): migrate busco_lineage to a channel input

--- a/subworkflows/sanger-tol/genome_statistics/meta.yml
+++ b/subworkflows/sanger-tol/genome_statistics/meta.yml
@@ -25,36 +25,23 @@ input:
 
         Structure: [ val(meta), path(asm1), path(asm2) ]
       pattern: "*.{fa,fa.gz}"
-  - ch_reads_fastk:
+  - ch_fastk:
       type: file
       description: |
         A channel containing FastK databases built from reads to compare the assemblies
-        against in MerquryFK.
+        against in MerquryFK, and optionally with maternal and paternal FastK haptaps from
+        MerquryFK's hapmaker tool.
 
-        Structure: [ val(meta), path(fastk_hist), path(fastk_ktabs) ]
+        Structure: [ val(meta), path(fastk_hist), path(fastk_ktabs), path(mat_ktabs), path(pat_ktabs) ]
       pattern: "*.{.hist,.ktab}"
-  - ch_mat_fastk:
-      type: file
-      description: |
-        A channel containing a FastK database from MerquryFk/hapmaper containing maternal
-        kmers.
-
-        Structure: [ val(meta), path(fastk_hist), path(fastk_ktabs) ]
-      pattern: "*.{.hist,.ktab}"
-  - ch_pat_fastk:
-      type: file
-      description: |
-        A channel containing a FastK database from MerquryFk/hapmaper containing paternal
-        kmers.
-
-        Structure: [ val(meta), path(fastk_hist), path(fastk_ktabs) ]
-      pattern: "*.{.hist,.ktab}"
-  - val_busco_lineage:
+  - ch_busco_lineage:
       type: string
       description: |
         The BUSCO lineage to use when assessing genome completeness with BUSCO.
         Either the name of a lineage (e.g. "lepidoptera_odb12") or one of
         "auto", "auto_euk", "auto_prok" to enable automatic lineage selection.
+
+        Structure: [ val(meta), string: busco_lineage ]
   - val_busco_lineage_directory:
       type: file
       description: |
