--- a/modules/sanger-tol/cramalign/minimap2alignhic/meta.yml
+++ b/modules/sanger-tol/cramalign/minimap2alignhic/meta.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://raw.githubusercontent.com/sanger-tol/nf-core-modules/master/modules/meta-schema.json
 name: "cramalign_minimap2alignhic"
 description: |
   Aligns a subset of Hi-C reads from a CRAM file to a reference genome using minimap2,
