--- a/modules/sanger-tol/cramalign/minimap2alignhic/meta.yml
+++ b/modules/sanger-tol/cramalign/minimap2alignhic/meta.yml
@@ -1,5 +1,4 @@
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/meta-schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/sanger-tol/nf-core-modules/master/modules/meta-schema.json
 name: "cramalign_minimap2alignhic"
 description: |
   Aligns a subset of Hi-C reads from a CRAM file to a reference genome using minimap2,
@@ -54,7 +53,8 @@ input:
           - edam: "http://edamontology.org/format_3475" # TSV
     - rglines:
         type: list
-        description: A list of strings, each a valid SAM-format @RG header line, to pass to the aligner
+        description: A list of strings, each a valid SAM-format @RG header line,
+          to pass to the aligner
   - - meta2:
         type: map
         description: |
@@ -63,6 +63,7 @@ input:
     - index:
         type: file
         description: minimap2 index of the reference to be aligned to
+        ontologies: []
     - reference:
         type: file
         description: FASTA file containing reference for alignment
@@ -88,11 +89,84 @@ output:
           pattern: "*.bam"
           ontologies:
             - edam: "http://edamontology.org/format_2572" # BAM
+  versions_minimap2:
+    - - ${task.process}:
+          type: string
+          description: Name of the process
+      - minimap2:
+          type: string
+          description: The name of the tool
+      - minimap2 --version | sed "s/minimap2 //g":
+          type: eval
+          description: The expression to obtain the version of the tool
+  versions_gawk:
+    - - ${task.process}:
+          type: string
+          description: Name of the process
+      - gawk:
+          type: string
+          description: The name of the tool
+      - gawk --version | grep -o -E "[0-9]+(\.[0-9]+)+" | head -n1:
+          type: eval
+          description: The expression to obtain the version of the tool
+  versions_filterfiveend:
+    - - ${task.process}:
+          type: string
+          description: Name of the process
+      - filter_five_end.pl:
+          type: string
+          description: The name of the tool
+      - echo 1.0:
+          type: eval
+          description: The expression to obtain the version of the tool
+  versions_samtools:
+    - - ${task.process}:
+          type: string
+          description: Name of the process
+      - samtools:
+          type: string
+          description: Name of the tool
+      - samtools --version | head -1 | sed -e "s/samtools //":
+          type: eval
+          description: The expression to obtain the version of the tool
+topics:
   versions:
-    - "versions.yml":
-        type: file
-        description: File containing software versions
-        pattern: "versions.yml"
+    - - ${task.process}:
+          type: string
+          description: Name of the process
+      - minimap2:
+          type: string
+          description: The name of the tool
+      - minimap2 --version | sed "s/minimap2 //g":
+          type: eval
+          description: The expression to obtain the version of the tool
+    - - ${task.process}:
+          type: string
+          description: Name of the process
+      - gawk:
+          type: string
+          description: The name of the tool
+      - gawk --version | grep -o -E "[0-9]+(\.[0-9]+)+" | head -n1:
+          type: eval
+          description: The expression to obtain the version of the tool
+    - - ${task.process}:
+          type: string
+          description: Name of the process
+      - filter_five_end.pl:
+          type: string
+          description: The name of the tool
+      - echo 1.0:
+          type: eval
+          description: The expression to obtain the version of the tool
+    - - ${task.process}:
+          type: string
+          description: Name of the process
+      - samtools:
+          type: string
+          description: Name of the tool
+      - samtools --version | head -1 | sed -e "s/samtools //":
+          type: eval
+          description: The expression to obtain the version of the tool
 authors:
   - "@prototaxites"
 maintainers:
