fix(genome_statistics): update snapshot

--- a/subworkflows/sanger-tol/genome_statistics/tests/fastk.config
+++ b/subworkflows/sanger-tol/genome_statistics/tests/fastk.config
@@ -2,6 +2,6 @@ nextflow.enable.moduleBinaries = true
 
 process {
     withName: FASTK_FASTK {
-        ext.args = params.fastk_args
+        ext.args = { "${params.fastk_args}" }
     }
 }
