--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -3,6 +3,7 @@ params {
     singularity_pull_docker_container = false
     test_data_base                    = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules'
     modules_testdata_base_path        = 'https://tolit.cog.sanger.ac.uk/test-data/'
+    nfcore_modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
 }
 
 // Resolves issue with accessing s3 from self-hosted runners
