--- a/modules/sanger-tol/unmask/meta.yml
+++ b/modules/sanger-tol/unmask/meta.yml
@@ -22,8 +22,8 @@ input:
           e.g. `[ id:'sample1' ]`
     - fasta:
         type: file
-        description: Fasta file
-        pattern: "*.fa(sta)?"
+        description: Fasta file, possibly compressed
+        pattern: "*.fa(sta)?(.gz)?"
         ontologies:
           - edam: "http://edamontology.org/format_1929" # FASTA
 
