--- a/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
+++ b/subworkflows/sanger-tol/pacbio_preprocess/meta.yml
@@ -29,14 +29,16 @@ components:
       git_remote: https://github.com/nf-core/modules.git
   - tabix/bgzip:
       git_remote: https://github.com/nf-core/modules.git
+  - untar:
+      git_remote: https://github.com/nf-core/modules.git
 
 input:
   - ch_reads:
       type: file
       description: |
-        Input channel containing sequencing reads in CRAM, BAM, FASTQ, or FASTA format.
+        Input channel containing sequencing reads in BAM, FASTQ, or FASTA format (FASTA is not accepted for HiFitrimmer)
         Structure: [ val(meta), path(reads) ]
-      pattern: "*.(cram|bam|fastq|fq|fasta|fa|fna)(.gz)?"
+      pattern: "*.(bam|fastq|fq|fasta|fa|fna)(.gz)?"
   - ch_adapter_yaml:
       type: file
       description: |
@@ -47,10 +49,13 @@ input:
       type: file
       description: |
         Adapter database for BLASTN adapter detection.
-      pattern: "*"
+      pattern: "*.tar.gz"
   - uli_primers:
-      type: boolean
-      description: Whether to run LIMA for ULI barcode demultiplexing
+      type: file
+      description: |
+        ULI primer FASTA file used by LIMA for barcode demultiplexing.
+        Provide a primer FASTA to enable demultiplexing, or an empty channel to skip.
+      pattern: "*.fasta|*.fa"
 
 output:
   - fastx:
