Add preprocessing step to cram_map_long_reads

--- a/subworkflows/sanger-tol/cram_map_long_reads/tests/nextflow.config
+++ b/subworkflows/sanger-tol/cram_map_long_reads/tests/nextflow.config
@@ -11,4 +11,37 @@ process {
     withName: SAMTOOLS_MERGE {
         ext.args = { "${params.samtools_merge_args}" }
     }
+
+    withName: LIMA {
+        ext.args = { "${params.lima_args}" }
+    }
+
+    withName: PBMARKDUP {
+        ext.prefix = { "${meta.id}_pbmarkdup"   }
+        ext.args = { "${params.pbmarkdup_args}" }
+    }
+
+    withName: ".*:PACBIO_PREPROCESS:FQ2CRAM_.*" {
+        ext.args = { "${params.fq2cram_args}" }
+    }
+
+    withName: ".*:PACBIO_PREPROCESS:HIFITRIMMER_FILTERBAM" {
+        ext.args = { "${params.hifitrimmer_args}" }
+    }
+
+    withName: ".*:PACBIO_PREPROCESS:BLAST_BLASTN" {
+        ext.args = { "${params.blastn_args}" }
+    }
+
+    withName: ".*:PACBIO_PREPROCESS:SAMTOOLS_FASTA" {
+        ext.args = { "${params.samtools_fasta_args}" }
+    }
+
+    withName: ".*:PACBIO_PREPROCESS:SAMTOOLS_FASTQ" {
+        ext.args = { "${params.pacbio_samtools_fastq_args}" }
+    }
+
+    withName: ".*:PACBIO_PREPROCESS:SAMTOOLS_VIEW" {
+        ext.args = { "${params.pacbio_samtools_view_args}" }
+    }
 }
